# skylos

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON_REPORT.md  CONTRIBUTING.md  Cargo.toml  DANGEROUS_CODE.MD  Dockerfile  PR_LOG.md  QUALITY.md  README.md  README_CN.md  REAL_WORLD_RESULTS.md  RELEASE_WORKFLOW.md  ROADMAP.md  SECURITY.md  STATE_OF_THE_ART_PLAN.md  action.yml  app.py  build.rs  dictionary.md  future.md  glama.json  llms-full.txt  llms.txt  missing_doc.md  pyproject.toml  python_output.json  rust_ouput.json  rust_vs_python_benchmark.md  server.json  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/workflows/: analyzer-speed.yml  corpus.yml  parity.yml  pr-title.yml  pre-commit.yaml  publish.yml  quality-benchmark.yml  release-please.yml  repo-map-pages.yml  rules-docs-parity.yml  skylos.yaml  tests.yaml
agent_review_benchmarks/: README.md  manifest.json
benchmarks/agent_behavior/: README.md  contract.yml  manifest.json  observations-forbidden-tool.json  observations-incomplete.json  observations-pass.json
benchmarks/agent_review/: README.md  adversarial_manifest.json  manifest.json
benchmarks/ai_code_defects/: README.md  manifest.json
benchmarks/dead_code/: README.md  adversarial_manifest.json  external_targets.json  manifest.json
benchmarks/deep_audit_logic/: README.md  expected.json
benchmarks/framework_corpus/: README.md  manifest.json
benchmarks/quality/: README.md  manifest.json
benchmarks/security/: README.md  manifest.json
benchmarks/verify_benchmark/: README.md  manifest.json
corpus/: manifest.json
corpus/fixtures/: gunicorn_config.py
desktop/tauri/: README.md  index.html  package-lock.json  package.json
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: main.rs
docs/: README.md  agent-behavior-testing.md  agent-verification.md  ai-code-verification.md  ai-hallucination-contracts.md  cli-output.md  index.html  llm-grounding-plan.md  opaque-identifier-plan.md
docs/i18n/: README.de.md  README.md  README.zh-CN.md
docs/repo-map/: app.js  index.html  styles.css
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
manual/agent_behavior/: README.md  agent-test.yml  fake_server.py
rust/: Cargo.toml  pyproject.toml
rust/python/skylos_fast/: __init__.py
rust/src/: clones.rs  coupling.rs  cycles.rs  file_discovery.rs  lib.rs  visitor.rs
scripts/: agent_behavior_benchmark.py  agent_review_benchmark.py  ai_code_defect_benchmark.py  analyzer_speed_check.py  build_repo_map.py  check_rule_docs_parity.py  compare_codex_skylos_agent_review.py  compare_codex_skylos_demo_deadcode.py  compare_codex_skylos_quality.py  corpus_ci.py  dead_code_benchmark.py  dead_code_compare_scanners.py  deep_audit_logic_benchmark.py  framework_corpus.py  quality_benchmark.py  regression_delta.py  repo_map_renderer.py  security_benchmark.py  security_compare_scanners.py  skylos_gate.py  verify_benchmark.py
skylos/: __init__.py  agent_center.py  agent_payload.py  agent_review_benchmark.py  agent_service.py  analyzer.py  api.py  api_artifacts.py  api_findings.py  api_payloads.py  api_snippets.py  api_urls.py  architecture.py  audit_candidates.py  audit_ci.py  audit_export.py  audit_polyglot.py  audit_processor.py  audit_revalidator.py  audit_store.py  audit_types.py  baseline.py  canonicalize.py  circular_deps.py  city.py  cli.py  cli_shared.py  config.py  constants.py  control_flow.py  credentials.py  dead_code.py  dead_code_benchmark.py  dead_code_liveness.py  demo_deadcode_benchmark.py  fast.py  file_discovery.py  fixer.py  fixgen.py  framework_aware.py  (+29 more)
skylos-rs/: CHANGELOG.md  Cargo.toml  ENTRY_POINT_IMPLEMENTATION.md  PRAGMA_IMPLEMENTATION.md  rust_output.json  rust_output_full.json
skylos-rs/examples/: debug_visitor.rs
skylos-rs/src/: analyzer.rs  entry_point.rs  framework.rs  lib.rs  main.rs  test_utils.rs  utils.rs  visitor.rs
skylos-rs/src/rules/: danger.rs  mod.rs  quality.rs  secrets.rs
skylos-rs/tests/: README.md  class_context_test.rs  class_parity_test.rs  framework_test.rs  integration_test.rs  quality_test.rs  security_test.rs  test_utils_test.rs  visitor_test.rs
skylos/adapters/: __init__.py  anthropic_adapter.py  base.py  litellm_adapter.py  openai_adapter.py
skylos/agents/: __init__.py  center.py  service.py  triage_learner.py
skylos/analysis/: __init__.py  architecture.py  architecture_findings.py  architecture_layers.py  circular_deps.py  control_flow.py  file_processing.py  implicit_refs.py  known_patterns.py  module_reachability.py  penalties.py  pyproject_entrypoints.py
skylos/api/: __init__.py  _ai_detection.py  _artifacts.py  _findings.py  _payloads.py  _snippets.py
skylos_mcp/: Dockerfile  LICENSE  __main__.py  auth.py  server.py
src/: lib.rs  queries.rs  types.rs  utils.rs
test/: BENCHMARK.md  change_ground_truth.py  compare_tools.py  conftest.py  coverage.xml  diagnostics.py  example_pragma.py  pragma_test.py  test_agent_behavior_benchmark.py  test_agent_behavior_cli.py  test_agent_behavior_contract.py  test_agent_behavior_evaluator.py  test_agent_behavior_openai.py  test_agent_center.py  test_agent_integration.py  test_agent_remediate.py  test_agent_review_benchmark.py  test_agent_review_compare.py  test_agent_service.py  test_agent_tool_privilege.py  test_agents.py  test_ai_code_defect_benchmark.py  test_ai_defect_challenge_harness.py  test_ai_pr_diff_rules.py  test_analyzer.py  test_analyzer_speed_check.py  test_api.py  test_api_signature_hallucination.py  test_api_symbol_truth.py  test_app_custom_manual.py  test_architecture.py  test_assertion_weakening.py  test_ast_mask.py  test_async_blocking.py  test_audit_candidates.py  test_audit_ci.py  test_audit_cli.py  test_audit_export.py  test_audit_investigator.py  test_audit_investigator_tools.py  (+205 more)
(+754 files in other folders)
