[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skylos"
version = "0.0.8"
requires-python = ">=3.8"
description = "A static analysis tool for Python codebases"
authors = [{name = "oha", email = "aaronoh2015@gmail.com"}]
dependencies = ["inquirer>=3.0.0"]

[project.scripts]
skylos = "skylos.cli:main"