[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skylos"
version = "3.5.1"
requires-python = ">=3.10"
description = "Find dead code, security vulnerabilities, and quality issues in Python, TypeScript, and Go. AI-powered static analysis with quality gates for CI/CD."
authors = [{name = "oha", email = "aaronoh2015@gmail.com"}]
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "static-analysis",
    "dead-code",
    "security",
    "linter",
    "code-quality",
    "sast",
    "vulnerability-scanner",
    "python-linter",
    "typescript-linter",
    "quality-gate",
    "ci-cd",
    "code-review",
    "secrets-detection",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "inquirer>=3.0.3",
    "libcst>=1.8.2",
    "rich>=14.0.0",
    "textual>=1.0.0",
    "keyring>=25.6.0,!=3.4.2",
    "requests",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
    "pyyaml",
    "litellm>=1.81.3",
    "networkx",
    "pyperclip"
]

[project.urls]
Homepage = "https://skylos.dev"
Documentation = "https://docs.skylos.dev"
Repository = "https://github.com/duriantaco/skylos"
Changelog = "https://github.com/duriantaco/skylos/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/duriantaco/skylos/issues"
Discord = "https://discord.gg/Ftn9t9tErf"

[project.optional-dependencies]
web = ["flask>=2.1.1", "flask-cors>=3.0.3"]
test = ["pytest>=9.0.2"]
all = ["flask>=2.1.1", "flask-cors>=3.0.3", "pytest>=9.0.2"]

[project.scripts]
skylos = "skylos.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skylos*"]
namespaces = false
[tool.skylos]
complexity = 10
nesting = 3
max_args = 5
max_lines = 50
model = "gpt-4.1"
exclude = []
ignore = []

[tool.skylos.masking]
names = []
decorators = []
bases = []

[tool.skylos.whitelist]
names = [
   ]

[tool.skylos.whitelist.documented]

[tool.skylos.whitelist.temporary]

[tool.skylos.gate]
fail_on_critical = true
max_security = 0
max_quality = 10
strict = false
