[package]
name = "skylos-companion"
version = "0.1.0"
edition = "2021"
description = "Thin Tauri shell for the Skylos active-agent queue"
authors = ["oha"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "=3.11.0"
tauri = { version = "=2.0.0", features = ["tray-icon"] }
time = "=0.3.36"
